--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>LET'S GIT IT</h1>
         <hr>
         
-        <h2>The "frontend" of a webpage consists of:</h2>
+        <h2>This is another title</h2>
         
         <ul>
             <li>HTML = HyperText Markup Language</li>
