Drop this commit please

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Some awesome feature in the future!
    
 
 THANKS!
+
+This is a line I won't use in the future and probably should be deleted
     </div>
 </body>
 
